   * updated translations: Finnish, Slovak, Valencian
 * Units:
   * Balancing changes:
     * Made units with the healthy trait take a quarter less damage from
       poison instead of half.
 * User interface:
   * Various minor cleanups and refactoring of the new widgets.
 * WML engine:
   * New command, [store_time_of_day], makes it possible to store ToD info
     in a WML array/container.
 * Miscellaneous and bug fixes:
   * Fixed the list of the unit's attacks getting cut off in the right panel
     (bug #12297).
   * Fixed wesnoth not to try to add duplicate ids to unit_map
   * Fixed a bug where the old unit type's abilities and attacks weren't
     completely cleared during level-up
   * Improved performance of 'recall' user action when disallow_recall
     is set to true in scenarios.

Version 1.5.4:
 * Editor2:
   * Rotate clipboard 60 deg. cw/ccw, ctrl+r/ctrl+shift+r respectively
     (cmd instead of ctrl on Mac). Active in the "paste" mode.
   * A drag operation only creates one undo action instead of many.
   * Partial undo feature to keep the old behavior of drag undo available
   * More visible selection - draw a special overlay on every selected hex.
   * Allow different map generators to be used in map -> generate map
     (FR #3950)
   * Reverse the preprocessor logic in src/ to default to building editor2,
     with a DISABLE_EDITOR2 define to build without it.
 * Graphics:
   * New portraits: Silver Mage (male), Mage of Light (male).
 * Language and i18n:
   * updated translations: Chinese (Traditional), Czech, French, Galician,
     German, Hungarian, Italian, Lithuanian, Polish
 * Music and sound effects:
   * Added a new music track "The Dangerous Symphony" by Gianmarco Leone.
 * Units:
   * Balancing changes:
     * Made units with the healthy trait take half the damage from poison.
     * Decreased the ranged attack of the Bowman from 7-3 to 6-3.
     * Added the marksman special to the ranged attack of the Orcish Assassin
       line.