@@ -13,6 +13,9 @@ Version 1.5.4+svn:
   * Unit changes and balancing
     * Made units with the healthy trait take a quarter less damage from poison.
 
+  * AI
+    * Made default AI to play better in multiplayer maps.
+
 Version 1.5.4:
   * Editor2
     * Rotate clipboard 60 degrees clockwise or counter-clockwise, ctrl+r
